[gd_scene load_steps=4 format=3 uid="uid://b5htqbo5ni32c"]

[ext_resource type="Script" path="res://Prefabs/UI/InputUI.gd" id="1_c0641"]
[ext_resource type="Texture2D" uid="uid://e7qqugoyg7av" path="res://Art/UI/Grapple_Buttons.png" id="2_j2nim"]

[sub_resource type="LabelSettings" id="LabelSettings_2w2tk"]
font_size = 60
font_color = Color(0.34, 0.34, 0.34, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[node name="GrappleTut" type="Control"]
z_index = -5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_c0641")
id = "Grapple"

[node name="GrappleSprite" type="Sprite2D" parent="."]
position = Vector2(-200, 0)
texture = ExtResource("2_j2nim")
hframes = 3

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
text = "TO SWING"
label_settings = SubResource("LabelSettings_2w2tk")
horizontal_alignment = 1
vertical_alignment = 1
