[gd_scene load_steps=5 format=3 uid="uid://dujwv8eitrnks"]

[ext_resource type="Script" path="res://Prefabs/UI/InputUI.gd" id="1_o6p2n"]
[ext_resource type="Texture2D" uid="uid://bsy63ia3pb8my" path="res://Art/UI/Move_Buttons.png" id="2_ee7qn"]
[ext_resource type="Texture2D" uid="uid://hrlugu3amawy" path="res://Art/UI/Jump_Buttons.png" id="3_ucysq"]

[sub_resource type="LabelSettings" id="LabelSettings_xoiby"]
font_size = 60
font_color = Color(0.34, 0.34, 0.34, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[node name="MoveAndJumpTut" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6p2n")
id = "MoveJump"

[node name="MoveSprite" type="Sprite2D" parent="."]
position = Vector2(-200, 0)
texture = ExtResource("2_ee7qn")
hframes = 3

[node name="JumpSprite" type="Sprite2D" parent="."]
position = Vector2(-200, 225)
texture = ExtResource("3_ucysq")
hframes = 3

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
text = "TO MOVE"
label_settings = SubResource("LabelSettings_xoiby")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_top = 150.0
offset_right = 300.0
offset_bottom = 250.0
text = "TO JUMP"
label_settings = SubResource("LabelSettings_xoiby")
horizontal_alignment = 1
vertical_alignment = 1
